# Open_Duck_reference_motion_generator

./: .gitattributes  .gitignore  README.md  pyproject.toml
open_duck_reference_motion_generator/: gait_generator.py  gait_playground.py  placo_walk_engine.py
open_duck_reference_motion_generator/robots/go_bdx/: auto_gait.json  go_bdx.urdf
open_duck_reference_motion_generator/robots/go_bdx/assets/: ear_left.stl  ear_right.stl  head_body_pitch.stl  head_body_roll.stl  head_body_yaw.stl  left_foot.stl  left_hip.stl  left_hip_rotation.stl  left_shin.stl  left_thigh.stl  neck.stl  pelvis.stl  right_foot.stl  right_hip.stl  right_hip_rotation.stl  right_shin.stl  right_thigh.stl
open_duck_reference_motion_generator/robots/go_bdx/placo_presets/: fast.json  medium.json  slow.json
open_duck_reference_motion_generator/robots/open_duck_mini/: auto_gait.json  open_duck_mini.urdf  placo_defaults.json
open_duck_reference_motion_generator/robots/open_duck_mini/assets/: 39281023.prt.stl  antenna.stl  antenna_holder_left.stl  antenna_holder_right.stl  antenna_motor_holder.stl  antenna_tip.stl  axis_to_axis.stl  block_to_axis.stl  bno055.stl  board.stl  body_part.stl  cage_back.stl  cage_bottom.stl  cage_bottom_battery_hold.stl  cage_top.stl  dc15_a01_case_b_dummy.stl  dc15_a01_case_f_dummy.stl  dc15_a01_case_m_dummy.stl  dc15_a01_horn_dummy.stl  double_u.stl  (+24 more)
open_duck_reference_motion_generator/robots/open_duck_mini_v2/: auto_gait.json  open_duck_mini_v2.urdf  placo_defaults.json
scripts/: auto_waddle.py  fit_poly.py  plot_poly_fit.py  replay_motion.py  replay_sweep.py
(+93 files in other folders)
