[project]
name = "open_duck_reference_motion_generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.12"
dependencies = [
    "flask>=3.1.0",
    "framesviewer>=1.0.2",
    "matplotlib>=3.10.0",
    "placo==0.6.3",
    "scipy>=1.15.2",
]
